Optimising the timeline object count for interruptions and fixing an overflow issue

--- a/src/js/components/patientProfile/patientProfile.module.css
+++ b/src/js/components/patientProfile/patientProfile.module.css
@@ -503,7 +503,12 @@ div.timelineCEBlack {
 }
 
 .timelineTreatementItem {
+    overflow: visible;
     background-color: rgb(255, 202, 27);
+}
+
+.timelineTreatementItem svg {
+    overflow: visible;
 }
 
 .timelineTreatementItem line {
